--- a/plugins/CoreHome/angularjs/comparisons/comparisons.component.html
+++ b/plugins/CoreHome/angularjs/comparisons/comparisons.component.html
@@ -5,7 +5,9 @@
         <div class="comparison-type">{{ 'General_Segment'|translate }}</div>
 
         <div class="title" title="{{ comparison.title }}&lt;br/&gt;{{ comparison.params.segment|urldecode }}">
-            <a href="{{ $ctrl.getUrlToSegment(comparison.params.segment) }}" target="_blank">{{ comparison.title }}</a>
+            <a href="{{ $ctrl.getUrlToSegment(comparison.params.segment) }}" target="_blank">
+            {{ comparison.title }}
+        </a>
         </div>
 
         <div class="comparison-period"
