Fix segment editor scrolling

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -329,7 +329,7 @@ html.comparisonsDisabled .segmentationContainer ul.submenu {
     max-height: 300px;
     margin-top: 5px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .segmentListContainer {
