--- a/plugins/Transitions/stylesheets/transitions.less
+++ b/plugins/Transitions/stylesheets/transitions.less
@@ -248,3 +248,8 @@ body .ui-tooltip.Transitions_Tooltip_Small {
         }
     }
 }
+
+#transitions_report > .row {
+    margin-left: 0;
+    margin-right: 0;
+}
