--- a/plugins/Transitions/stylesheets/transitions.less
+++ b/plugins/Transitions/stylesheets/transitions.less
@@ -252,4 +252,9 @@ body .ui-tooltip.Transitions_Tooltip_Small {
 #transitions_report > .row {
     margin-left: 0;
     margin-right: 0;
+
+    body.widgetized & {
+        margin-left: 0.75rem;
+        margin-right: 0.75rem;
+    }
 }
