--- a/plugins/UserCountry/templates/adminIndex.twig
+++ b/plugins/UserCountry/templates/adminIndex.twig
@@ -26,13 +26,16 @@
     <div class="row form-group provider{{ id|e('html_attr') }}">
         <div class="col s12 m4 l2">
             <p>
-                <input class="location-provider"
-                       name="location-provider"
-                       value="{{ id }}"
-                       type="radio"
-                       ng-model="locationSelector.selectedProvider"
-                       id="provider_input_{{ id }}" {% if provider.status != 1 %}disabled="disabled"{% endif %}/>
-                <label for="provider_input_{{ id }}">{{ provider.title|translate }}</label>
+                <label>
+                    <input class="location-provider"
+                           name="location-provider"
+                           value="{{ id }}"
+                           type="radio"
+                           ng-model="locationSelector.selectedProvider"
+                           id="provider_input_{{ id }}" {% if provider.status != 1 %}disabled="disabled"{% endif %}/>
+
+                    <span>{{ provider.title|translate }}</span>
+                </label>
             </p>
             <p class="loc-provider-status">
                 {% if provider.status == 0 %}
