--- a/plugins/UsersManager/angularjs/user-permissions-edit/user-permissions-edit.component.html
+++ b/plugins/UsersManager/angularjs/user-permissions-edit/user-permissions-edit.component.html
@@ -114,8 +114,10 @@
         <tr>
             <th class="select-cell">
                 <span class="checkbox-container">
-                    <input type="checkbox" id="perm_edit_select_all" ng-model="$ctrl.isAllCheckboxSelected" ng-change="$ctrl.onAllCheckboxChange()" />
-                    <label for="perm_edit_select_all"></label>
+                    <label>
+                        <input type="checkbox" id="perm_edit_select_all" ng-model="$ctrl.isAllCheckboxSelected" ng-change="$ctrl.onAllCheckboxChange()" />
+                        <span></span>
+                    </label>
                 </span>
             </th>
             <th>{{:: 'General_Name'|translate }}</th>
@@ -150,8 +152,10 @@
         <tr ng-repeat="entry in $ctrl.siteAccess">
             <td class="select-cell">
                 <span class="checkbox-container">
-                    <input type="checkbox" ng-attr-id="perm_edit_select_row{{ $index }}" ng-model="$ctrl.selectedRows[$index]" ng-click="$ctrl.onRowSelected()" />
-                    <label ng-attr-for="perm_edit_select_row{{ $index }}"></label>
+                    <label>
+                        <input type="checkbox" ng-attr-id="perm_edit_select_row{{ $index }}" ng-model="$ctrl.selectedRows[$index]" ng-click="$ctrl.onRowSelected()" />
+                        <span></span>
+                    </label>
                 </span>
             </td>
             <td>
