more fixes + more updated screenshots

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -557,10 +557,11 @@ a.metric_category {
 
 .enable_all_users, .visible_to_website, .auto_archive {
     display: inline-block;
+    margin-left: 4px;
 }
 
 .auto_archive {
-    max-width: 280px;
+    max-width: 190px;
     a.dropList {
         display: inline-block;
         width: calc(100% - 15px);
