--- a/plugins/UsersManager/angularjs/paged-users-list/paged-users-list.component.less
+++ b/plugins/UsersManager/angularjs/paged-users-list/paged-users-list.component.less
@@ -47,6 +47,7 @@ piwik-paged-users-list {
       }
       .input-field {
         margin-top: 0;
+        margin-bottom: 0;
         padding: 0;
       }
     }
