--- a/plugins/Morpheus/stylesheets/ui/_components.less
+++ b/plugins/Morpheus/stylesheets/ui/_components.less
@@ -193,11 +193,11 @@
 
 .ui-menu {
   .ui-menu-item {
-    a {
+    > .ui-menu-item-wrapper {
       color: @color-silver-l20;
       text-transform: uppercase;
       .font-default(10px, 18px);
-
+      margin: 0;
       padding: 2px;
     }
   }
