--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -439,6 +439,7 @@ a.metric_category {
 
 .ui-autocomplete.ui-menu.ui-widget {
     box-shadow: 0 1px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
+    padding: 6px !important;
 }
 
 @media all and (max-width: 749px) {
