couple fixes & updated screenshots

--- a/plugins/SegmentEditor/templates/_segmentSelector.twig
+++ b/plugins/SegmentEditor/templates/_segmentSelector.twig
@@ -92,8 +92,10 @@
     </h2>
     <p class="description">
         <span>
-            <input type="checkbox" id="hideSegmentMessage" name="hideSegmentMessage" />
-            <label for="hideSegmentMessage">{{ 'SegmentEditor_HideMessageInFuture'|translate }}</label>
+            <label>
+                <input type="checkbox" id="hideSegmentMessage" name="hideSegmentMessage" />
+                <span>{{ 'SegmentEditor_HideMessageInFuture'|translate }}</span>
+            </label>
         </span>
     </p>
     <input role="yes" type="button" value="{{ 'General_Yes'|translate }}"/>
