--- a/plugins/UsersManager/angularjs/user-permissions-edit/user-permissions-edit.component.less
+++ b/plugins/UsersManager/angularjs/user-permissions-edit/user-permissions-edit.component.less
@@ -218,6 +218,7 @@
     }
     .input-field {
       margin-top: 0;
+      margin-bottom: 0;
     }
     .select-dropdown {
       margin-bottom: 0;
