--- a/plugins/UsersManager/angularjs/paged-users-list/paged-users-list.component.less
+++ b/plugins/UsersManager/angularjs/paged-users-list/paged-users-list.component.less
@@ -154,7 +154,7 @@ piwik-paged-users-list {
 
   .delete-user-confirm-modal,.change-user-role-confirm-modal {
     .modal-no {
-      float: right;
+      margin-left: 1em;
       margin-right: 1em;
       margin-top: 1em;
     }
