--- a/plugins/UsersManager/angularjs/user-permissions-edit/user-permissions-edit.component.less
+++ b/plugins/UsersManager/angularjs/user-permissions-edit/user-permissions-edit.component.less
@@ -186,7 +186,7 @@
 
   .delete-access-confirm-modal, .change-access-confirm-modal, .confirm-give-access-all-sites {
     .modal-no {
-      float: right;
+      margin-left: 1em;
       margin-right: 1em;
       margin-top: 1em;
     }
