--- a/plugins/UsersManager/stylesheets/usersManager.less
+++ b/plugins/UsersManager/stylesheets/usersManager.less
@@ -93,7 +93,7 @@
 
 #confirmChangesWithPassword {
   .modal-no {
-    float: right;
+    margin-left: 1em;
     margin-right: 1em;
     margin-top: 1em;
   }
