--- a/plugins/Marketplace/templates/plugin-list.twig
+++ b/plugins/Marketplace/templates/plugin-list.twig
@@ -1,3 +1,5 @@
+{% import '@CorePluginsAdmin/macros.twig' as pluginsMacro %}
+
 {% if pluginsToShow|length > 0 %}
     <div class="pluginListContainer row">
         {% for plugin in pluginsToShow %}
