convert some conditions to filters

--- a/plugins/CoreHome/templates/_dataTableActions.twig
+++ b/plugins/CoreHome/templates/_dataTableActions.twig
@@ -11,8 +11,7 @@
         {% set visualizationIcons %}
             <ul id='dropdownVisualizations{{ randomIdForDropdown }}' class='dropdown-content dataTableFooterIcons'>
                 {% for footerIconGroup in footerIcons %}
-                    {% for footerIcon in footerIconGroup.buttons %}
-                        {% if footerIcon.icon %}
+                    {% for footerIcon in footerIconGroup.buttons|filter(footerIcon => footerIcon.icon) %}
                         <li>
                             {% set numIcons = numIcons + 1 %}
                             {% set isActiveEcommerceView = clientSideParameters.abandonedCarts is defined and
@@ -28,7 +27,6 @@
                                 {% if footerIcon.title is defined %}<span>{{ footerIcon.title }}</span>{% endif %}
                             </a>
                         </li>
-                        {% endif %}
                     {% endfor %}
                     <li class="divider"></li>
                 {% endfor %}
