--- a/plugins/Insights/templates/overviewWidget.twig
+++ b/plugins/Insights/templates/overviewWidget.twig
@@ -5,20 +5,18 @@
         <div class="dataTableScroller">
         <table class="dataTable"
                title="{{ consideredGrowth|e('html_attr') }} {{ consideredChanges|e('html_attr') }}">
-            {% for dataTable in reports.getDataTables() %}
-                {% if dataTable.getRowsCount > 0 %}
-                        {% set metadata = dataTable.getAllTableMetadata %}
+            {% for dataTable in reports.getDataTables()|filter(dataTable => dataTable.getRowsCount > 0) %}
+                {% set metadata = dataTable.getAllTableMetadata %}
 
-                        <thead>
-                            {% include "@Insights/table_header.twig" %}
-                        </thead>
+                <thead>
+                    {% include "@Insights/table_header.twig" %}
+                </thead>
 
-                        <tbody>
-                            {% for row in dataTable.getRows %}
-                                {% include "@Insights/table_row.twig" %}
-                            {% endfor %}
-                        </tbody>
-                {% endif %}
+                <tbody>
+                    {% for row in dataTable.getRows %}
+                        {% include "@Insights/table_row.twig" %}
+                    {% endfor %}
+                </tbody>
             {% endfor %}
         </table>
         </div>
