Fix modal centering and initial top position.

--- a/plugins/Live/stylesheets/visitor_profile.less
+++ b/plugins/Live/stylesheets/visitor_profile.less
@@ -342,6 +342,7 @@
   color: @theme-color-text;
   cursor: pointer;
   background-color: @color-silver-l95;
+  margin-right: 2px;
 
   &:hover {
     background-color: #bfbfbf;
