--- a/plugins/Morpheus/stylesheets/ui/_popups.less
+++ b/plugins/Morpheus/stylesheets/ui/_popups.less
@@ -1,3 +1,8 @@
+.ui-dialog {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .ui-dialog-title {
   color: @theme-color-text;
   font-weight: normal;
