apply some more pr feedback

--- a/plugins/CoreHome/angularjs/period-selector/period-selector.directive.less
+++ b/plugins/CoreHome/angularjs/period-selector/period-selector.directive.less
@@ -34,6 +34,12 @@
     margin-left: -2%;
     margin-right: -5%;
 
+    // dropdown width/height looks off due to scaling
+    .dropdown-content {
+      width: auto !important;
+      height: auto !important;
+    }
+
     .form-group {
       margin: 0;
     }
