--- a/plugins/Morpheus/stylesheets/ui/_buttons.less
+++ b/plugins/Morpheus/stylesheets/ui/_buttons.less
@@ -60,6 +60,7 @@ input[type="submit"].btn,
   cursor: not-allowed;
   filter: alpha(opacity=65);
   opacity: 0.65;
+  color: white !important;
 }
 // See http://getbootstrap.com/css/#buttons-options
 .btn.btn-noop {
