add missing link to consent help page

--- a/plugins/PrivacyManager/templates/askingForConsent.twig
+++ b/plugins/PrivacyManager/templates/askingForConsent.twig
@@ -34,7 +34,7 @@ _paq.push(['trackPageview']);
         </p>
         <h3>{{ 'PrivacyManager_AskForConsentStep2'|translate }}</h3>
         <p>
-            {{ 'PrivacyManager_AskForConsentStep2Desc'|translate }}
+            {{ 'PrivacyManager_AskForConsentStep2Desc'|translate('<a href="https://matomo.org/blog/2018/04/how-should-i-write-my-privacy-notice-for-matomo-analytics-under-gdpr/" target="_blank" rel="noreferrer noopener">', '</a>')|raw }}
         </p>
         <h3>{{ 'PrivacyManager_AskForConsentStep3'|translate }}</h3>
         <p>
