fix color of checkbox mark

--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -72,6 +72,7 @@ input.browser-default {
   background-color: @theme-color-brand !important;
 }
 
+[type="checkbox"]:checked + span:not(.lever):before,
 [type="checkbox"]:checked + label::before {
   border-right-color: @theme-color-brand;
   border-bottom-color: @theme-color-brand;
