tweak less for datatable navigation

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -642,6 +642,11 @@ div.dataTableScroller {
   }
 }
 
+.dataTableFooterNavigation > .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 @media only screen and (min-width: 993px) {
   #dashboardWidgetsArea .widget,
   .theWidgetContent > div:not(#dashboard) {
