style is only useful for dashboard

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -642,7 +642,7 @@ div.dataTableScroller {
   }
 }
 
-.dataTableFooterNavigation > .row {
+#dashboard .dataTableFooterNavigation > .row {
   margin-left: 0;
   margin-right: 0;
 }
