Mention users should not share their token with anyone

--- a/plugins/UsersManager/templates/addNewTokenSuccess.twig
+++ b/plugins/UsersManager/templates/addNewTokenSuccess.twig
@@ -7,6 +7,7 @@
     <div piwik-content-block content-title="{{ 'UsersManager_TokenSuccessfullyGenerated'|translate|e('html_attr') }}">
         <p>
             {{ 'UsersManager_PleaseStoreToken'|translate }}
+            <br>{{ 'UsersManager_DoNotStoreToken'|translate }}
         </p>
         <pre piwik-select-on-focus style="font-size: 40px;" class="generatedTokenAuth"><code>{{ generatedToken }}</code></pre>
 
