--- a/plugins/UsersManager/templates/addNewTokenSuccess.twig
+++ b/plugins/UsersManager/templates/addNewTokenSuccess.twig
@@ -11,7 +11,7 @@
         </p>
         <pre piwik-select-on-focus style="font-size: 40px;" class="generatedTokenAuth"><code>{{ generatedToken }}</code></pre>
 
-        <a href="{{ linkTo({'module': 'UsersManager', 'action': 'userSecurity'}) }}" class="btn"
+        <a href="{{ linkTo({'module': 'UsersManager', 'action': 'userSecurity'}) }}" class="btn" style="height:auto"
         >{{ 'UsersManager_ConfirmTokenCopied'|translate }} {{ 'UsersManager_GoBackSecurityPage'|translate }}</a>
     </div>
 
