--- a/plugins/UsersManager/templates/addNewTokenSuccess.twig
+++ b/plugins/UsersManager/templates/addNewTokenSuccess.twig
@@ -7,10 +7,11 @@
     <div piwik-content-block content-title="{{ 'UsersManager_TokenSuccessfullyGenerated'|translate|e('html_attr') }}">
         <p>
             {{ 'UsersManager_PleaseStoreToken'|translate }}
+            <br>{{ 'UsersManager_DoNotStoreToken'|translate }}
         </p>
         <pre piwik-select-on-focus style="font-size: 40px;" class="generatedTokenAuth"><code>{{ generatedToken }}</code></pre>
 
-        <a href="{{ linkTo({'module': 'UsersManager', 'action': 'userSecurity'}) }}" class="btn"
+        <a href="{{ linkTo({'module': 'UsersManager', 'action': 'userSecurity'}) }}" class="btn" style="height:auto"
         >{{ 'UsersManager_ConfirmTokenCopied'|translate }} {{ 'UsersManager_GoBackSecurityPage'|translate }}</a>
     </div>
 
