--- a/plugins/Login/templates/confirmResetPassword.twig
+++ b/plugins/Login/templates/confirmResetPassword.twig
@@ -23,16 +23,16 @@
                 <div class="row">
                     <div class="col s12 input-field">
                         <input type="hidden" name="nonce" value="{{ nonce }}"/>
-                        <input type="password" placeholder="" name="mtmpasswordconfirm" class="input" value="" size="20"
+                        <input type="password" placeholder="" name="mtmpasswordconfirm" id="mtmpasswordconfirm" class="input" value="" size="20"
                                autocorrect="off" autocapitalize="none"
                                tabindex="20" />
-                        <label for="login_form_password"><i class="icon-locked icon"></i> {{ 'Login_NewPassword'|translate }}</label>
+                        <label for="mtmpasswordconfirm"><i class="icon-locked icon"></i> {{ 'Login_NewPassword'|translate }}</label>
                     </div>
                 </div>
 
                 <div class="row actions">
                     <div class="col s12">
-                        <input class="submit btn" id='login_form_submit' type="submit" value="{{ 'General_Confirm'|translate }}"
+                        <input class="submit btn" id='login_reset_confirm' type="submit" value="{{ 'General_Confirm'|translate }}"
                                tabindex="100"/>
                     </div>
                 </div>
