use correct color for text fields

--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -90,20 +90,6 @@ nav.blue-grey.darken-3 {
 }
 
 input:not([type]):focus:not([readonly]),
- input[type=text]:focus:not([readonly]),
- input[type=password]:focus:not([readonly]),
- input[type=email]:focus:not([readonly]),
- input[type=url]:focus:not([readonly]),
- input[type=time]:focus:not([readonly]),
- input[type=date]:focus:not([readonly]),
- input[type=datetime]:focus:not([readonly]),
- input[type=datetime-local]:focus:not([readonly]),
- input[type=tel]:focus:not([readonly]),
- input[type=number]:focus:not([readonly]),
- input[type=search]:focus:not([readonly]),
- textarea.materialize-textarea:focus:not([readonly]),
-
- input:not([type]):focus:not([readonly]),
  input[type=text]:not(.browser-default):focus:not([readonly]),
  input[type=password]:not(.browser-default):focus:not([readonly]),
  input[type=email]:not(.browser-default):focus:not([readonly]),
@@ -121,17 +107,17 @@ input:not([type]):focus:not([readonly]),
 }
 
 input:not([type]):focus:not([readonly]) + label,
- input[type=text]:focus:not([readonly]) + label,
- input[type=password]:focus:not([readonly]) + label,
- input[type=email]:focus:not([readonly]) + label,
- input[type=url]:focus:not([readonly]) + label,
- input[type=time]:focus:not([readonly]) + label,
- input[type=date]:focus:not([readonly]) + label,
- input[type=datetime]:focus:not([readonly]) + label,
- input[type=datetime-local]:focus:not([readonly]) + label,
- input[type=tel]:focus:not([readonly]) + label,
- input[type=number]:focus:not([readonly]) + label,
- input[type=search]:focus:not([readonly]) + label,
+ input[type=text]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=password]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=email]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=url]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=time]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=date]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=datetime]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=datetime-local]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=number]:not(.browser-default):focus:not([readonly]) + label,
+ input[type=search]:not(.browser-default):focus:not([readonly]) + label,
  textarea.materialize-textarea:focus:not([readonly]) + label {
   color: @theme-color-brand;
 }
