--- a/plugins/PrivacyManager/templates/askingForConsent.twig
+++ b/plugins/PrivacyManager/templates/askingForConsent.twig
@@ -10,7 +10,7 @@
 
     <div piwik-content-block content-title="{{ 'PrivacyManager_WhenDoINeedConsent'|translate|e('html_attr') }}" class="privacyAskingForConsent">
         <p>
-            {{ 'PrivacyManager_WhenConsentIsNeeded1'|translate|translate(
+            {{ 'PrivacyManager_WhenConsentIsNeeded1'|translate(
                 '<a href="https://matomo.org/docs/gdpr/" target="_blank" rel="noreferrer noopener">', '</a>',
                 '<a href="https://matomo.org/blog/2018/04/lawful-basis-for-processing-personal-data-under-gdpr-with-matomo/" target="_blank" rel="noreferrer noopener">', '</a>'
             )|raw }}
