--- a/plugins/PrivacyManager/templates/askingForConsent.twig
+++ b/plugins/PrivacyManager/templates/askingForConsent.twig
@@ -10,7 +10,10 @@
 
     <div piwik-content-block content-title="{{ 'PrivacyManager_WhenDoINeedConsent'|translate|e('html_attr') }}" class="privacyAskingForConsent">
         <p>
-            {{ 'PrivacyManager_WhenConsentIsNeeded1'|translate }}
+            {{ 'PrivacyManager_WhenConsentIsNeeded1'|translate(
+                '<a href="https://matomo.org/docs/gdpr/" target="_blank" rel="noreferrer noopener">', '</a>',
+                '<a href="https://matomo.org/blog/2018/04/lawful-basis-for-processing-personal-data-under-gdpr-with-matomo/" target="_blank" rel="noreferrer noopener">', '</a>'
+            )|raw }} 
             <br /><br />
             {{ 'PrivacyManager_WhenConsentIsNeeded2'|translate('<a href="' ~ linkTo({module: 'PrivacyManager', action: 'privacySettings'}) ~ '">', '</a>.')|raw }}
         </p>
@@ -34,7 +37,7 @@ _paq.push(['trackPageview']);
         </p>
         <h3>{{ 'PrivacyManager_AskForConsentStep2'|translate }}</h3>
         <p>
-            {{ 'PrivacyManager_AskForConsentStep2Desc'|translate }}
+            {{ 'PrivacyManager_AskForConsentStep2Desc'|translate('<a href="https://matomo.org/blog/2018/04/how-should-i-write-my-privacy-notice-for-matomo-analytics-under-gdpr/" target="_blank" rel="noreferrer noopener">', '</a>')|raw }}
         </p>
         <h3>{{ 'PrivacyManager_AskForConsentStep3'|translate }}</h3>
         <p>
